\name{NEWS}
\title{NEWS file for the annmap package}
\section{Changes in version 1.5.8}{
  \itemize{
    \item{IMPROVED}{ ANNMAP-119 as.vector=TRUE results are now named }
    \item{IMPROVED}{ ANNMAP-120 genomeToTranscriptCoords could handle coding regions }
  }
}
\section{Changes in version 1.5.7}{
  \itemize{
    \item{BUG}{ Check for uniqueness in transcriptToCodingExon, transcriptToCodingRange, transcriptToUtrExon and transcriptToUtrRange }
  }
}
\section{Changes in version 1.5.6}{
  \itemize{
    \item{NEW}{ Added \code{transcriptToUtrExon} }
    \item{IMPROVED}{ Sequence removed from \code{transcriptToCodingExon} }
  }
}
\section{Changes in version 1.5.5}{
  \itemize{
    \item{IMPROVED}{ ANNMAP-115 Added method \code{geneToGeneRegionTrack} to generate a list of \code{Gviz} \code{GeneRegionTrack} elements that can be passed to \code{plotTracks} }
  }
}
\section{Changes in version 1.5.4}{
  \itemize{
    \item{BUG}{ ANNMAP-118 transcriptToCodingRange( ..., end='3' ) returns whole transcript for untranslated transcripts. }    \item{IMPROVED}{ ANNMAP-114 Added additional logging when using webservice }
    \item{IMPROVED}{ ANNMAP-116 Introduce function(s) to calculate the coding length of a gene(s) -- See: \code{?nonIntronicGeneLength} and \code{?nonIntronicTranscriptLength}. }
  }
}
\section{Changes in version 1.5.3}{
  \itemize{
    \item{IMPROVED}{ ANNMAP-114 Added additional logging when using webservice }
    \item{IMPROVED}{ ANNMAP-113 Added documentation to cookbook for webservice }
    \item{IMPROVED}{ webservice json to data.frame speed improvements }
  }
}
\section{Changes in version 1.2.1}{
  \itemize{
    \item{BUG}{ ANNMAP-112 transcriptCoordsToGenome and proteinCoordsToGenome both failed when returning a GRanges object as I had strand as a numeric, rather than an integer. }
  }
}
\section{Changes in version 1.1.1}{
  \itemize{