@@ -9,7 +9,7 @@ Description: annmap provides annotation mappings for Affymetrix exon
         geneToExon(), exonDetails(), etc. Functions to plot gene
         architecture and BAM file data are also provided. Underlying
         data are from Ensembl.
-Version: 1.5.9
+Version: 1.5.10
 Date: 2011-09-14
 Author: Tim Yates <tyates@picr.man.ac.uk>
 Maintainer: Tim Yates <tyates@picr.man.ac.uk>
